Change image source in index.html

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </section>
 
     <section class="img-card">
-      <img src="gay-black.png" alt="Image mignonne" />
+      <img src="image.png" alt="Image mignonne" />
       <div class="caption">Team motivation 🌸</div>
     </section>
   </main>
